iterations/01_Werror/W-01.txt
W-01.cpp: In function 'int main()':
W-01.cpp:7:8: error: comparison of integer expressions of different signedness: 'int' and 'unsigned int' [-Werror=sign-compare]
    7 |  if (a < b) {
      |      ~~^~~
cc1plus: all warnings being treated as errors
